Fix PR #56 add new apk+fix extras

--- a/Italian/main/MiuiGallery.apk/res/values-it/strings.xml
+++ b/Italian/main/MiuiGallery.apk/res/values-it/strings.xml
@@ -55,10 +55,13 @@
     <string name="loading">Caricamento…</string>
     <string name="no_thumbnail">Nessuna miniatura</string>
     <string name="crop_save_text">Taglia e salva</string>
+    <string name="crop_save_text_setas">Apply</string>
+    <string name="crop_recognize_text">Recognize</string>
     <string name="multiface_crop_help">Tocca un viso per iniziare.</string>
     <string name="saving_image">Salvataggio foto...</string>
+    <string name="recognizing_image">Recognizing picture…</string>
     <string name="save_error">Impossibile salvare immagine ritagliata.</string>
-    <string name="crop_label">Ritaglia foto</string>
+    <string name="crop_label">Crop</string>
     <string name="select_image">Seleziona foto</string>
     <string name="select_video">Seleziona video</string>
     <string name="select_item">Seleziona elemento</string>
@@ -74,20 +77,18 @@
     <string name="confirm_delete_album" formatted="false">Sicuro di voler eliminare %s album (contenenti %s elementi)?</string>
     <string name="confirm_delete_system_album">%s è un album di sistema, sicuro di volerlo eliminare?</string>
     <string name="operation_delete_confirm_message_folder">Cartelle e file verranno eliminati nello stesso momento.</string>
-    <string name="delete_folder">Eliminare %1$d cartelle?</string>  
+    <string name="delete_folder">Eliminare %1$d cartelle?</string>
     <string name="delete_file">Eliminare %1$d file?</string>
     <string name="delete_files_and_folders">"Confermare l'eliminazione di %1$d file e %2$d cartella(e)?"</string>
     <string name="confirm_delete_init_title">Hint</string>
     <string name="confirm_delete_init_message">"L'immagine verrà eliminata da questo dispositivo e dal tuo MiCloud. Se vuoi eliminarla solo in locale, esegui l'operazione localmente."</string>
     <string name="confirm_delete_has_cloud_local_image_video">Eliminare %s elemento(i) in &lt;b>locale e in cloud&lt;/b>?</string>
-    <string name="confirm_delete_has_cloud_local_image">Eliminare %s immagine(i) in &lt;b>locale e in cloud&lt;/b>?</string>
-    <string name="confirm_delete_has_cloud_local_video">Eliminare %s video in &lt;b>locale e in cloud&lt;/b>?</string>
     <string name="confirm_delete_has_cloud_image_video">Eliminare %s elemento(i) in &lt;b>cloud&lt;/b>?</string>
-    <string name="confirm_delete_has_cloud_image">Eliminare %s immagine(i) in &lt;b>cloud&lt;/b>?</string>
-    <string name="confirm_delete_has_cloud_video">Eliminare %s video in &lt;b>cloud&lt;/b>?</string>
     <string name="confirm_delete_has_local_image_video">Eliminare %s elemento(i)?</string>
-    <string name="confirm_delete_has_local_image">Eliminare %s immagine(i)?</string>
-    <string name="confirm_delete_has_local_video">Eliminare %s video?</string>
+    <string name="confirm_delete_pictures">Delete %s pictures?</string>
+    <string name="confirm_delete_videos">Delete %s videos?</string>
+    <string name="confirm_delete_this_picture">Delete this picture?</string>
+    <string name="confirm_delete_this_video">Delete this video?</string>
     <string name="cancel">Annulla</string>
     <string name="select_all">Seleziona tutto</string>
     <string name="deselect_all">Deseleziona tutto</string>
@@ -222,11 +223,11 @@
     <string name="clear_thumbnail_cache_summary">Consultando la galleria verranno create delle anteprime. Cancellando la cache aumenterà lo spazio libero.</string>
     <string name="clear_thumbnail_cache_confirm">La cache delle anteprime verrà cancellata. La Galleria eseguirà una nuova scansione media e ricreerà le anteprime.</string>
     <string name="cleaning_cache">Cancellazione cache...</string>
-    <string name="seconds">secondi</string>
+    <string name="seconds">" secondi"</string>
     <string name="screensaver_category">Screensaver</string>
     <string name="screensaver_activate_mode">Screensaver</string>
     <string name="screensaver_activate_only_charging">Attiva solo in carica</string>
-    <string name="screensaver_path">Album screensaver:\u0020</string>
+    <string name="screensaver_path">"Album: "</string>
     <string name="screensaver_path_not_set">Non impostato</string>
     <string name="set_screensaver_path_title">Screensaver</string>
     <string name="set_screensaver_path_message">Questo album verrà visualizzato 5 secondi dopo lo spegnimento dello schermo.</string>
@@ -255,16 +256,21 @@
     <string name="menu_item_sort_size_desc">Dimensione (decrescente)</string>
     <string name="menu_item_sort_date_asc">Data crescente</string>
     <string name="menu_item_sort_date_desc">Data decrescente</string>
+    <string name="menu_item_sort_size">Size</string>
+    <string name="menu_item_sort_date">Date</string>
+    <string name="menu_item_sort_name">Name</string>
     <string name="operation_rename">Rinomina</string>
     <string name="operation_share">Condividi</string>
     <string name="operation_refresh">Aggiorna</string>
     <string name="operation_set_as_screensaver">Imposta come salva schermo</string>
     <string name="operation_unset_as_screensaver">Annulla salva schermo</string>
     <string name="operation_add_picture">Aggiungi immagini</string>
-    <string name="how_many_videos">%d Video</string>
-    <string name="how_many_sub_folders">%d Cartelle</string>
+    <string name="operation_add_secret">Add secret</string>
+    <string name="operation_remove_secret">Remove secret</string>
+    <string name="how_many_videos">%d video</string>
+    <string name="how_many_sub_folders">%d cartelle</string>
     <string name="directory_info_divider">"  |  "</string>
-    <string name="how_many_pics">%d Immagini</string>
+    <string name="how_many_pics">%d immagini</string>
     <string name="global_setting">Impostazioni</string>
     <string name="no_storage_disable_cloud_albums">Album cloud disabilitati; riprova quando lo spazio della memoria esterna sarà disponibile.</string>
     <string name="message_no_delete_access">Accesso negato. Impossibile eliminare file o cartella: %s</string>
@@ -282,9 +288,11 @@
     <string name="share_album_space_full">Questo album condiviso è pieno. Eliminare alcune immagini.</string>
     <string name="cloud_gallery_recyclebin_full">Cestino Cloud pieno, svuota il cestino Cloud su i.xiaomi.com.</string>
     <string name="sync_history_power_on">Sincronizza cronologia immagini solo quando in ricarica</string>
+    <string name="sync_only_in_wifi_alert">Turning off this option may increase your mobile data usage.</string>
     <string name="sync_only_in_wifi">Solo Wi-Fi</string>
     <string name="sync_only_in_wifi_summary">Consigliato per un minore consumo del traffico dati</string>
-    <string name="sync_only_in_wifi_alert">Disattivando il download solo in Wi-Fi potresti consumare più traffico dati. Confermare la disattivazione?</string>
+    <string name="only_show_camera_in_first_page">Only show the photos of the camera album in the first page</string>
+    <string name="only_show_camera_in_first_page_summary">When turned off, the photos of all the cloud albums will be shown in the first page.</string>
     <string name="alert">Notifica</string>
     <string name="gallery_cloud_provider_name">Galleria</string>
     <string name="sync_album">Sincronizza album</string>
@@ -292,7 +300,6 @@
     <string name="open_sync_title">Sincronizzazione necessaria</string>
     <string name="alert_message_open_sync">"E' necessaria la sincronizzazione, vuoi sincronizzare adesso?"</string>
     <string name="open">Apri sincronizzazione</string>
-    <string name="cloud_gallery_no_pictures">Nessuna immagine trovata su MiCloud</string>
     <string name="click_to_add_picture">Tocca per aggiungere immagini</string>
     <string name="no_network_connected">Nessuna connessione di rete disponibile</string>
     <string name="initial_cloud_text">In ogni momento e ovunque tu sia, guarda e organizza le tue foto</string>
@@ -301,6 +308,7 @@
     <string name="add_to_cloud_album">Aggiungi al Cloud</string>
     <string name="move_to_cloud_album">Sposta nel Cloud</string>
     <string name="move">Sposta</string>
+    <string name="cloud_folder_chooser_move">Delete images from original album</string>
     <string name="add_to_cloud_successfully_message">"Aggiunto all'album MiCloud."</string>
     <string name="add_to_cloud_space_full_message">Album MiCloud pieno.</string>
     <string name="add_to_cloud_local_space_full_message">Memoria piena o non ancora pronta.</string>
@@ -312,6 +320,13 @@
     <string name="add_to_cloud_failed_message_with_count">Impossibile aggiungere %s elemento(i) agli album cloud</string>
     <string name="add_to_cloud_reasons" />
     <string name="add_to_cloud_unknow_reasons">Si è verificato un errore sconosciuto</string>
+    <string name="add_to_secret_successfully_message">Added to secret album</string>
+    <string name="add_to_secret_failed_message_with_count">"%2$s items can't be added to secret: %1$s."</string>
+    <string name="remove_from_secret_successfully_message">Removed from secret album</string>
+    <string name="remove_from_secret_failed_message_with_count">"%2$s items can't be removed from secret: %1$s."</string>
+    <string name="add_to_cloud_unfinished_message_with_count">%1$s items are not added to cloud</string>
+    <string name="add_to_secret_unfinished_message_with_count">%1$s items are not added to secret</string>
+    <string name="remove_from_secret_unfinished_message_with_count">%1$s items are not removed from secret</string>
     <string name="cant_delete_cloud_album">Impossibile eliminare: %s è un album di sistema oppure è condiviso con altri utenti.</string>
     <string name="cannot_delete_sharer_photo">Impossibile eliminare %s elemento(i) caricati da altri utenti.</string>
     <string name="share_album">Condividi album</string>
@@ -351,6 +366,8 @@ i tuoi amici.Consultalo e aggiornalo
     <string name="create_new_cloud_folder">Crea nuova cartella Cloud</string>
     <string name="input_cloudfolder_name">Nome cartella Cloud</string>
     <string name="cloudfolder_already_exists">Cartella Cloud già esistente</string>
+    <string name="cloudfolder_fail_to_load_data">Failed to load data for unknown reason, please retry</string>
+    <string name="cloudfolder_loading_data">(Loading data...)</string
     <string name="loading_thumbnail">Caricamento anteprima...</string>
     <string name="video_not_exist">Video inesistente!</string>
     <string name="loading_video">Download video…</string>
@@ -359,7 +376,9 @@ i tuoi amici.Consultalo e aggiornalo
     <string name="confirm_download_video_title">Scarica video</string>
     <string name="confirm_download_video_message">Il video richiede il download! Il download verrà ripreso qundo sarà disponibile una connessione Wi-Fi.</string>
     <string name="image_download_item_title">Download immagine (%s)</string>
-    <string name="item_not_sync">Questo elemento non può essere sincronizzato in cloud e non può essere scaricato</string>
+    <string name="item_not_sync_for_origin_video">"Can't download this video because it hasn't been synced with your cloud."</string>
+    <string name="item_not_sync_for_origin_image">"Can't download this picture because it hasn't been synced with your cloud."</string>
+    <string name="item_not_sync_for_refocus_data">"Can't download refocus data for this picture because it hasn't been synced with your cloud."</string>
     <string name="fail_to_download_n_items">Impossibile scaricare %s</string>
     <string name="cloud_album_more_settings">Album cloud</string>
     <string name="browse_category">Gestione Foto</string>
@@ -376,9 +395,9 @@ i tuoi amici.Consultalo e aggiornalo
     <string name="alert_init_merged_title">Tutte le tue foto finalmente insieme.</string>
     <string name="alert_init_merged_message">Adesso le foto sul tuo dispositivo e quelle sul tuo MiCloud verranno visualizzate insieme.</string>
     <string name="by_sms">SMS</string>
-    <string name="by_email">E-mail</string>
+    <string name="by_email">Email</string>
     <string name="by_others">Altro</string>
-    <string name="enter_email_hint">"Inserisci indirizzo E-mail "</string>
+    <string name="enter_email_hint">Inserisci indirizzo Email</string>
     <string name="messagelist_sender_self">Io</string>
     <string name="adding_recipients">Inserimento destinatari...</string>
     <string name="pick_too_many_recipients">Troppi destinatari</string>
@@ -402,7 +421,7 @@ i tuoi amici.Consultalo e aggiornalo
     <string name="share_by_email_successfully">Condivisione %1$s tramite E-mail completata</string>
     <string name="share_by_email_start">Tentativo di condivisione n background per %1$s </string>
     <string name="exit_share">"Esci dall'album"</string>
-    <string name="exit_share_in_process">"Uscita dall'album in corso, attendere prego..."</string>
+    <string name="exit_share_in_process">"Uscita dall'album in corso..."</string>
     <string name="exit_share_successfully">"Uscita dall'album %1$s completata"</string>
     <string name="exit_share_failed">"Uscita dall'album %1$s fallita"</string>
     <string name="cancel_hint">Operazione annullata</string>
@@ -439,7 +458,7 @@ i tuoi amici.Consultalo e aggiornalo
     <string name="album_share_exit_confirm">Confermi di voler annullare la condivisione di questo album?</string>
     <string name="get_album_info_in_process">Richiesta informazioni album condiviso, attendere prego...</string>
     <string name="album_share_stat_content">Inviti di condivisione album</string>
-    <string name="album_share_kicked">Sei stato rimosso da %1$s</string>
+    <string name="album_share_kicked">%1$s is closed</string>
     <string name="album_share_title_new_album">Nuovo album condiviso</string>
     <string name="album_share_subtitle_not_ready">Informazioni album non pronte. Premi per scaricare.</string>
     <string name="album_share_subtitle_requesting">Download informazioni album...</string>
@@ -469,6 +488,7 @@ i tuoi amici.Consultalo e aggiornalo
     <string name="cloud_camera_display_name">Non ordinati</string>
     <string name="camera_folder_display_name">Foto</string>
     <string name="cloud_screenshots_display_name">Screenshot</string>
+    <string name="secret_album_display_name">Secret album</string>
     <string name="miui_capture_screen_folder_display_name">Screenshot</string>
     <string name="internal_camera_folder_display_name">Foto Intere</string>
     <string name="internal_miui_capture_screen_folder_display_name">Screenshot interni</string>
@@ -482,7 +502,6 @@ i tuoi amici.Consultalo e aggiornalo
     <string name="androidesk_wallpapers">Android Desk Wallpapers</string>
     <string name="dcim_opaipic">Opaipic</string>
     <string name="mtxx">MTXX</string>
-    <string name="miliao_saved">MiTalk</string>
     <string name="tencent_qq_hd_pic">QQ HD</string>
     <string name="immomo_camera">Immomo</string>
     <string name="weikan_weikan">Weikan TV</string>
@@ -503,6 +522,7 @@ i tuoi amici.Consultalo e aggiornalo
     <string name="baidu_bdmobile_downloads">Baidu Mobile</string>
     <string name="tieba">Tie Ba</string>
     <string name="yellow_page">Cartella</string>
+    <string name="mipc_1">Pocket Camera</string>
     <string name="picker_tab_photo">Foto</string>
     <string name="picker_no_items_selected">Nessuna selezione</string>
     <string name="picker_select_album_title_empty">Seleziona un album</string>
@@ -525,5 +545,16 @@ i tuoi amici.Consultalo e aggiornalo
     <string name="long_press_to_refocus">Tieni premuto per rimettere a fuoco</string>
     <string name="ubifocus_data_missing">Alcuni dati sono andati persi</string>
     <string name="ubifocus_map_error">Alcuni dati non sono validi</string>
-    <string name="ubifocus_refocus_fail_tip">Impossibile rimettere a fuoco a causa di dati persi o non validi</string>
+    <string name="ubifocus_refocus_data_missing">"Can't refocus because some of this image's data is missing"</string>
+    <string name="ubifocus_refocus_map_error">"Can't refocus because some of this image's data contains errors"</string>
+    <string name="ubifocus_refocus_download_tip">"You need to download this image's data before refocusing."</string>
+    <string name="download_refocus_data">Download refocusing data</string>
+    <string name="refocus_data_downloading">Downloading refocusing data…</string>
+    <string name="ubifocus_guide_text">Touch &amp; hold to refocus</string>
+    <string name="priority_storage">Save to SD card</string>
+    <string name="priority_storage_summary">When SD card is inserted, download files to SD card automatically.</string>
+    <string name="photo_paint_rotate">Rotate</string>
+    <string name="photo_paint_crop">Crop</string>
+    <string name="paint_cancel_title">Cancel edit</string>
+    <string name="paint_cancel_context">Confirm to cancel the edit?</string>
 </resources>
