--- a/Italian/main/MiuiVideo.apk/res/values-it/strings.xml
+++ b/Italian/main/MiuiVideo.apk/res/values-it/strings.xml
@@ -68,6 +68,7 @@
     <string name="vp_offline">Offline</string>
     <string name="vp_milink">MiLink</string>
     <string name="vp_function">Impostazioni</string>
+    <string name="vp_select_video_source">Select source</string>
     <string name="vp_select_ep">Seleziona ep</string>
     <string name="vp_device_list">Lista dispositivi</string>
     <string name="vp_select_function">Seleziona funzione</string>
@@ -83,32 +84,61 @@
     <string name="vp_using_4_3">Forza 4:3</string>
     <string name="local_media">Video locali</string>
     <string name="count_ge_favorite">preferito da %d</string>
+    <string name="userdata_alert_title">Data usage</string>
+    <string name="userdata_alert_content">You are currently using data network, may produce a lot of traffic fees, sure you want to continue?</string>
+    <string name="userdata_alert_ok">Continue</string>
+    <string name="check_network">"Can't connect to the network. Check your data connection and try again."</string>
     <string name="search">Cerca</string>
     <string name="count_get_result">%d Risultati</string>
     <string name="search_result_input_hint">Prego inserire la parola chiave da cercare</string>
     <string name="search_result_hint">%s risultati della ricerca</string>
     <string name="search_result_empty_text">Nessun risultato</string>
-    <string name="search_result_recommend_hint">Potrebbe piacerti：</string>
-    <string name="search_result_recommend_empty">Non è stato possibile trovare nulla</string>
+    <string name="search_recommend_media_hint">Recommended for you</string>
+    <string name="search_recommend_word_hint">Trending</string>
+    <string name="search_recommend_empty">"Didn't find anything"</string>
+    <string name="filter_program">Filter</string>
     <string name="online_video">Online</string>
     <string name="my_video">Locali</string>
     <string name="search_online_video">Ricerca video online</string>
     <string name="declaration_content">Vuoi accettare  i termini della Sohu Video, iQiyi, e altri fornitori video?</string>
     <string name="declaration">"Termini d'uso"</string>
+    <string name="no_longer_tips">"Don't show again"</string>
     <string name="more">Altro</string>
-    <string name="play_history">Recentemente visti</string>
-    <string name="my_favorite">Preferiti</string>
     <string name="local_video">Locali</string>
+    <string name="my_favorite">Starred</string>
+    <string name="my_offline">Offline</string>
+    <string name="play_history">Recentemente visti</string>
+    <string name="addon">" plugins"</string>
+    <string name="share_device">Shared device</string>
+    <string name="not_login">Not signed in</string>
+    <string name="click_to_login">Touch image to sign in</string>
+    <string name="gong_count_ge">%d total</string>
+    <string name="installed_count_ge">%d installed</string>
+    <string name="count_ge_device">%d devices</string>
     <string name="play_his_empty_hint">Nessuna cronologia</string>
     <string name="delete">Elimina</string>
     <string name="today">Oggi</string>
     <string name="yesterday">Ieri</string>
+    <string name="addon_all">All</string>
+    <string name="installed">Installed</string>
+    <string name="addon_list_empty_hint">Empty</string>
+    <string name="addon_installed_empty_hint">Empty</string>
+    <string name="device_empty_hint">Empty</string>
+    <string name="device_media_empty_hint">Empty</string>
     <string name="imports">Importati</string>
     <string name="local_media_empty_hint">Nessun video locale</string>
     <string name="edit">Modif.</string>
     <string name="local_favorite_empty_hint">Nessun preferito</string>
     <string name="unfavorite">Unstar</string>
+    <string name="guess_you_like">Recommended for you</string>
+    <string name="recent_play">Recently played: Ep.%d</string>
+    <string name="see_all">See all</string>
+    <string name="all_ep">All ep</string>
+    <string name="gong_count_ji">%d Ep. total</string>
+    <string name="hot_recommend">Trending</string>
+    <string name="elipsis">…</string>
     <string name="play">Inzia</string>
+    <string name="connecting">Connecting</string>
     <string name="episode">Episodio</string>
     <string name="introduce">Riassunto</string>
     <string name="comment">Commenti</string>
@@ -132,9 +162,13 @@
     <string name="rank">Classifica</string>
     <string name="all">Tutti</string>
     <string name="filter">Filtro</string>
+    <string name="filter_media">Filter media</string>
     <string name="channel_choice_empty_hint">Nessun video famoso</string>
     <string name="channel_all_empty_hint">Nessun video</string>
+    <string name="play_count_ci">%d played</string>
     <string name="tv_channel_empty_hint">Nessun canale</string>
+    <string name="defaults">Default</string>
+    <string name="fullscreen">Fullscreen</string>
     <string name="feature">Consigliati</string>
     <string name="count_ge_feature">%d selezionati</string>
     <string name="feature_list_empty_hint">Lista consigli vuota</string>
@@ -152,6 +186,11 @@
     <string name="negative_comment">Commenti negativi</string>
     <string name="comment_review_list_empty_hint">Nessun commento</string>
     <string name="xiaomi_user">Utente</string>
+    <string name="star5">5 stars</string>
+    <string name="star4">4 stars</string>
+    <string name="star3">3 stars</string>
+    <string name="star2">2 stars</string>
+    <string name="star1">1 star</string>
     <string name="send">Invia</string>
     <string name="media_name_comment">%s commento</string>
     <string name="comment_edit_et_hint">Prego inserire il commento</string>
@@ -159,6 +198,7 @@
     <string name="comment_edit_start_hint">Clicca una stella per votare:</string>
     <string name="comment_count_less_tip">Devi scrivere almeno d% caratteri</string>
     <string name="comment_count_much_tip">Il tuo commento non può eccedere i d% carattero</string>
+    <string name="click_star_rate">Click on the star rating</string>
     <string name="offline_no_source">Nessuna origine cache può essere avviata</string>
     <string name="download_is_in_tasklist">È stato inserito nella lista cache</string>
     <string name="download_is_success">"E' stato memorizzato nella cache"</string>
@@ -170,7 +210,10 @@
     <string name="select_offline_media">Seleziona cache multimediale offline</string>
     <string name="manage_offline_media">Gestione cache multimediale offline</string>
     <string name="manage">Gestisci</string>
+    <string name="done">Done</string>
     <string name="download_select_more">Aumenta cache</string>
+   <string name="offline_media_empty_hint">Empty</string>
+    <string name="all_media">All media</string>
     <string name="select_all">S.tutti</string>
     <string name="select_none">D.tutti</string>
     <string name="select_count_xiang">%d selezionato</string>
@@ -178,15 +221,14 @@
     <string name="offline_setting">Video offline</string>
     <string name="use_cellular_network">Usa la rete cellulare</string>
     <string name="use_cellular_network_summary">utilizza la rete cellulare per scaricare i video, questo comporterà costi molto elevati di traffico dati.</string>
-    <string name="play_setting">Riproduci</string>
-    <string name="auto_play">Autoplay quanto è pronto</string>  
-    <string name="auto_play_summary">Riproduci il video quando il buffering o il download è finito</string>
-    <string name="continue_to_play_nextset">Riproduci il prossimo episodio automaticamente</string>
-    <string name="continue_to_play_nextset_summary">"Quando l'episodio che stai guardando è terminato il prossimo inizierà automaticamente"</string>
+    <string name="mipush_setting">Xiaomi push</string>
+    <string name="receive_mipush">Receive xiaomi push</string>
+    <string name="receive_mipush_summary">Receive notifications about new and updated online content</string>
     <string name="other_setting">Altri</string>
     <string name="clear_cache">Cancella la cache delle immagini</string>
     <string name="clear_cache_summary">Cancella le immagini memorizzate nella cache dal browser Video</string>
-    <string name="loading">" "<CDATA>Caricamento </CDATA>" "</string>
+    <string name="clear_cache_success">Cache cleared</string>
+    <string name="loading"><CDATA>Caricamento </CDATA></string>
     <string name="reloading_tip">"Impossibile connettersi alla rete"</string>
     <string name="retry">Riprova</string>
     <string name="month">Mese</string>
@@ -219,14 +261,25 @@
     <string name="connect_error">Errore di connessione</string>
     <string name="source_error">Errore recupero sorgente</string>
     <string name="download_error">Errore di scaricamento</string>
+    <string name="download_file_fail">Local file access failed, maybe there is no space on SD card</string>
     <string name="offline_max_promote">In attesa della cache, Si possono eseguire al massimo due compiti di cache allo stesso tempo.</string>
+    <string name="addon_category">Addons</string>
+    <string name="add_more_addons">Add more addons</string>
+    <string name="pick_addon_to_delete">choose items</string>
+    <string name="delete_addon">Delete</string>
+    <string name="delete_addon_content">Delete this item?</string>
+    <string name="install_comfirm">Tap to install</string>
+    <string name="start_addon">start addon</string>
+    <string name="addon_install_complete_disc">%s addons installed. You can view them in /My videos/.</string>
+    <string name="addon_update_desc">New version found, update now?</string>
+    <string name="upgrade">Upgrade</string>
     <string name="sdcard_storage">Memoria interna</string>
     <string name="disk_volume">Rimuovi memoria</string>
     <string name="gong_count_dlna">%d DLNA</string>
     <string name="gong_count_xiang">%d file</string>
     <string name="count_ge">%d file</string>
-    <string name="video">\u0020Video</string>
-    <string name="favorite">\u0020Preferiti</string>
+    <string name="video">Video</string>
+    <string name="favorite">Preferiti</string>
     <string name="myfavorite">Preferiti</string>
     <string name="recentplay">Video recenti</string>
     <string name="mycamera">Miei video</string>
@@ -261,4 +314,4 @@
     <string name="clarity_supper">Chiarezza superiore</string>
     <string name="clarity_high">Chiarezza elevata</string>
     <string name="clarity_standard">Chiarezza standard</string>
-    </resources>
+</resources>
