--- a/Italian/main/MiTagApp.apk/res/values-it/strings.xml
+++ b/Italian/main/MiTagApp.apk/res/values-it/strings.xml
@@ -70,16 +70,17 @@ toccalo con la parte posteriore del tuo telefono"</string>
     <string name="not_save_btn">No</string>
     <string name="saving">Salvataggio…</string>
     <string name="bump_write_alert">To apply these settings, touch the back of your phone to the tile</string>
+    <string name="pwd_alert">Set a password now</string>
     <string name="pwd_pref">Proteggi il tag dalla riscrittura</string>
     <string name="pwd_pref_desc">Quando questa funzione di protezione viene attivata, sarà richiesta una passowrd per scrivere nuovamente il tag</string>
-    <string name="pwd_prot_on">ON</string>
-    <string name="pwd_prot_off">OFF</string>
     <string name="input_password">Prego inserire la password di 4 cifre</string>
     <string name="input_password_gain">Please enter the password gain</string>
     <string name="inconsistent_password">Password non coincidenti, riprova</string>
     <string name="input_old_password">Inserire la password salvata</string>
     <string name="input_new_password">Prego inserire la nuova password di 4 cifre</string>
     <string name="error_password">Errore password</string>
+    <string name="failed_to_write">Failed to write the tag</string>
+    <string name="failed_to_erase">Failed to erase the tag</string>
     <string name="help_title">Aiuto</string>
     <string name="err_nfc_off">"Abilita l'NFC in Impostazioni > Wireless &amp; reti > Altro > NFC"</string>
     <string name="err_no_nfc">"Il tuo telefono non supporta l'NFC. Questa app potrebbe non funzionare."</string>
@@ -89,6 +90,8 @@ toccalo con la parte posteriore del tuo telefono"</string>
     <string name="err_no_enough_space">"Non c'è abbastanza spazio sul tag"</string>
     <string name="err_fail_to_erase">Non è stato possibile cancellare il tag</string>
     <string name="err_tag_read_only">Non puoi scrivere su questo tag</string>
+    <string name="err_tag_protected">This tag is password protected. Please enter the correct password.</string>
+    <string name="err_parse_external_data">This file type is not supported</string
     <string name="wireless_network">Wireless &amp; reti</string>
     <string name="display">Schermo</string>
     <string name="sound">Audio</string>
@@ -101,6 +104,7 @@ toccalo con la parte posteriore del tuo telefono"</string>
     <string name="set_now">Impostazioni</string>
     <string name="write_pon_pon_tile">Scrivi tag</string>
     <string name="reading">Lettura…</string>
+    <string name="writing">Writing…</string>
     <string name="touch_and_write_more">"Per scrivere un'altra copia,
 tocca un altro tag con il retro del tuo telefono."</string>
     <string name="write_success">Scrittura eseguita</string>
@@ -109,8 +113,8 @@ tocca un altro tag con il retro del tuo telefono."</string>
     <string name="erase_success">Cancellazione eseguita</string>
     <string name="back_to_home">Indietro</string>
     <string name="share">Condividi</string>
-    <string name="share_subject">Share one app: %1$s</string>
-    <string name="share_content">"I've *%1$s* written to a Mi NFC tag. To read it, just touch it with the back of your device. Get the app here: http://app.xiaomi.com/detail/56946"</string>
+    <string name="share_subject">Condividi un app: %1$s</string>
+    <string name="share_content">"Hai *%1$s* scritto un tag MI NFC. Per leggerlo, basta toccarlo con la parte posteriore del dispositivo. Scarica l'applicazione qui: http://app.xiaomi.com/detail/56946"</string>
     <string name="erasing">Cancellazione…</string>
     <string name="total_read_tag">Tag letti:</string>
     <string name="total_write_tag">Tag scritti:</string>
@@ -125,8 +129,8 @@ tocca un altro tag con il retro del tuo telefono."</string>
     <string name="deleting">Cancellazione…</string>
     <string name="auto_brightness">Luminosità automatica</string>
     <string name="auto_brightness_on_off">Luminosità automatica %s</string>
-    <string name="on">On</string>
-    <string name="off">Off</string>
+    <string name="on">Attivata</string>
+    <string name="off">Disattivata</string>
     <string name="toggle">Cambia</string>
     <string name="percent">%s%%</string>
     <string name="brightness">Luminosità</string>
@@ -135,9 +139,9 @@ tocca un altro tag con il retro del tuo telefono."</string>
     <string name="pick_contacts">Scegli contatti</string>
     <string name="hint_input_phone">Inserisci il numero di telefono</string>
     <string name="airplane">Modalità aereo</string>
-    <string name="ringer_mode">Ring mode</string>
-    <string name="contact">Share contact</string>
-    <string name="contact_card">Name card</string>
+    <string name="ringer_mode">Modalità suoneria</string>
+    <string name="contact">Condividi contatto</string>
+    <string name="contact_card">Nome carta</string>
     <string name="contact_name">Nome</string>
     <string name="contact_phone">Telefono</string>
     <string name="contact_email">Email</string>
@@ -154,15 +158,15 @@ tocca un altro tag con il retro del tuo telefono."</string>
     <string name="screen_timeout_summary">Dopo %s di inattività</string>
     <string name="app">Avvia app</string>
     <string name="select_app">Scegli app</string>
-    <string name="enable_wifi">WLAN</string>
+    <string name="enable_wifi">Wi-Fi</string>
     <string name="connect_to">Connetti a %s</string>
-    <string name="share_wifi">Share WLAN</string>
+    <string name="share_wifi">Condividi via Wi-Fi</string>
     <string name="available_networks">Reti disponibili</string>
     <string name="no_available_networks">Nessuna rete disponibile</string>
-    <string name="no_available_networks_summary">Riprova dopo esserti connesso ad una WLAN</string>
-    <string name="hint_wifi_password">Password WLAN</string>
+    <string name="no_available_networks_summary">Riprova dopo esserti connesso ad una Wi-Fi</string>
+    <string name="hint_wifi_password">PasswordWi-Fi</string>
     <string name="input_password_warning">"La password sarà scritta sul tag, non dimenticarlo!"</string>
-    <string name="send_email">Invia mail</string>
+    <string name="send_email">Invia email</string>
     <string name="email_to">A</string>
     <string name="email_subject">Oggetto</string>
     <string name="email_body">Messaggio</string>
@@ -170,7 +174,7 @@ tocca un altro tag con il retro del tuo telefono."</string>
     <string name="hint_input_subject">Oggetto</string>
     <string name="hint_input_message">Messaggio</string>
     <string name="body_characters">%d/650</string>
-    <string name="car_mode">Car mode</string>
+    <string name="car_mode">Modalità auto</string>
     <string name="disturb_mode">Non disturbare</string>
     <string name="open_web">Apri pagina web</string>
     <string name="web_url">URL</string>
@@ -184,21 +188,26 @@ tocca un altro tag con il retro del tuo telefono."</string>
     <string name="alarm_label">Etichetta allarme (opzionale)</string>
     <string name="hint_input_alarm_label">"Inserisci l'etichetta dell'allarme"</string>
     <string name="torch">Torcia</string>
+    <string name="play_song">Esegui una canzone</string>
     <string name="music">Esegui musica</string>
+    <string name="play_music_desc">Esegui o metti in pausa la musica</string>
     <string name="vibrate_mode">Vibrazione</string>
     <string name="vibrate_on">Vibrazione attiva</string>
     <string name="vibrate_off">Vibrazione disattiva</string>
-    <string name="miui_ringer_mode">Ring mode</string>
-    <string name="ringer_normal">Ring</string>
-    <string name="ringer_silent">Silent</string>
+    <string name="miui_ringer_mode">Modalità suoneria</string>
+    <string name="ringer_normal">Suoneria</string>
+    <string name="ringer_silent">Silenzioso</string>
+    <string name="gps">Satelliti GPS</string>
+    <string name="data">Dati</string>
+    <string name="data_net">Rete mobile</string>
     <string name="dialog_select_account">Seleziona un account</string>
     <string name="toast_import_failed">Impossibile importare il contatto</string>
-    <string name="xiaomi_update_dialog_title">%1$s update!</string>
+    <string name="xiaomi_update_dialog_title">%1$s aggiornato!</string>
     <string name="xiaomi_update_dialog_message">"Introduzione alla versione %1$s
 Dimensione: %2$s"</string>
     <string name="xiaomi_update_dialog_message_diff">"Introduzione alla versione %1$s
 Dimensione update differenziale: %2$s"</string>
-    <string name="xiaomi_external_storage_unavailable">Storage unavailable, please check the SD card.</string>
+    <string name="xiaomi_external_storage_unavailable">Memoria non disponibile, si prega di verificare la scheda SD.</string>
     <string name="xiaomi_bytes_unit">%1$sB</string>
     <string name="xiaomi_kilobytes_unit">%1$sKB</string>
     <string name="xiaomi_megabytes_unit">%1$sMB</string>
