--- a/Italian/main/InCallUI.apk/res/values-it/strings.xml
+++ b/Italian/main/InCallUI.apk/res/values-it/strings.xml
@@ -2,34 +2,34 @@
 <resources>
     <string name="phoneAppLabel">Telefono</string>
     <string name="inCallLabel">InCallUI</string>
-    <string name="onscreen_add_call_text">Add call</string>
+    <string name="onscreen_add_call_text">Aggiungi chiamata</string>
     <string name="onscreen_audio_mode_bluetooth">Bluetooth</string>
-    <string name="onscreen_audio_mode_handset">Hands-free</string>
-    <string name="onscreen_audio_mode_headset">Headphones</string>
-    <string name="onscreen_audio_mode">Answer using</string>
-    <string name="onscreen_audio_mode_speaker">Speaker</string>
-    <string name="onscreen_audio_switch_mode">Switch audio</string>
-    <string name="onscreen_call_record">Record</string>
-    <string name="onscreen_dialer">Keyboard</string>
-    <string name="onscreen_end_call_text">End</string>
-    <string name="onscreen_hold_text">Hold</string>
-    <string name="onscreen_manage_calls_text">Manage calls</string>
-    <string name="onscreen_merge_calls_text">Merge calls</string>
-    <string name="onscreen_mute_text">Mute</string>
+    <string name="onscreen_audio_mode_handset">Kit mani libere</string>
+    <string name="onscreen_audio_mode_headset">Cuffie</string>
+    <string name="onscreen_audio_mode">Rispondi tramite</string>
+    <string name="onscreen_audio_mode_speaker">Altoparlando</string>
+    <string name="onscreen_audio_switch_mode">Scambia audio</string>
+    <string name="onscreen_call_record">Registra</string>
+    <string name="onscreen_dialer">Tastiera</string>
+    <string name="onscreen_end_call_text">Fine</string>
+    <string name="onscreen_hold_text">Trattieni</string>
+    <string name="onscreen_manage_calls_text">Gestione chiamate</string>
+    <string name="onscreen_merge_calls_text">Unisci chiamate</string>
+    <string name="onscreen_mute_text">Muto</string>
     <string name="onscreen_note_text">Note</string>
-    <string name="onscreen_send_flash_text">Flash</string>
-    <string name="onscreen_speaker_text">Speaker</string>
-    <string name="onscreen_swap_calls_text">Swap</string>
-    <string name="onscreen_tools_off">Tools</string>
-    <string name="onscreen_tools_on">Tools</string>
-    <string name="call_record_button_label">Recording %s</string>
-    <string name="call_record_wait_label">Waiting</string>
-    <string name="contacts_icon_label">Contacts</string>
-    <string name="conference_call_number">%s people</string>
-    <string name="conference_call_description" formatted="false">%s,%s etc. total %s</string>
-    <string name="separate_from_conference">Separate call</string>
-    <string name="call_title_redialing_with_times">Redialed %d times</string>
-    <string name="onHold">On hold</string>
+    <string name="onscreen_send_flash_text">SMS Flash</string>
+    <string name="onscreen_speaker_text">Altoparlante</string>
+    <string name="onscreen_swap_calls_text">Scambia</string>
+    <string name="onscreen_tools_off">Strumenti</string>
+    <string name="onscreen_tools_on">Strumenti</string>
+    <string name="call_record_button_label">Registrazione %s</string>
+    <string name="call_record_wait_label">In attesa</string>
+    <string name="contacts_icon_label">Contatti</string>
+    <string name="conference_call_number">%s persone</string>
+    <string name="conference_call_description" formatted="false">%s,%s ecc. totale %s</string>
+    <string name="separate_from_conference">Separa chiamata</string>
+    <string name="call_title_redialing_with_times">Ricomposto %d volte</string>
+    <string name="onHold">In attesa</string>
     <string name="unknown">Sconosciuto</string>
     <string name="private_num">Numero privato</string>
     <string name="payphone">Telefono a monete</string>
@@ -51,7 +51,7 @@
     <string name="callFailed_dialToSs">Richiesta DIAL modificata in una richiesta SS.</string>
     <string name="callFailed_dialToDial">Richiesta DIAL modificata in una DIAL con diverso numero.</string>
     <string name="callFailed_cb_enabled">Impossibile effettuare chiamate in uscita con il blocco chiamate attivo.</string>
-    <string name="callFailed_incoming_cb_enabled">Party has barred all Incoming calls.</string>
+    <string name="callFailed_incoming_cb_enabled">Il numero chiamato ha bloccato tutte le chiamate in entrata.</string>
     <string name="callUnanswered_forwarded">Chiamata senza risposta ed inoltrata</string>
     <string name="callFailed_dsac_restricted">Tutte le chiamate sono limitate dal controllo di accesso.</string>
     <string name="callFailed_dsac_restricted_emergency">Chiamate di emergenza limitate dal controllo di accesso.</string>
@@ -70,20 +70,20 @@
     <string name="pause_prompt_yes">Sì</string>
     <string name="pause_prompt_no">No</string>
     <string name="wild_prompt_str">Sostituisci carattere jolly con</string>
-    <string name="modify_call_prompt_yes">Yes</string>
+    <string name="modify_call_prompt_yes">Si</string>
     <string name="modify_call_prompt_no">No</string>
-    <string name="modify_call_failure_str">"Modify Call request failed
+    <string name="modify_call_failure_str">"Richiesta di modifica chiamata fallita
 "</string>
-    <string name="modify_call_option_title">Which type of call?</string>
-    <string name="modify_call_option_vt">VT</string>
-    <string name="modify_call_option_vt_tx">Video transmit</string>
-    <string name="modify_call_option_vt_rx">Video receive</string>
-    <string name="modify_call_option_voice">Voice Only</string>
-    <string name="accept_modify_call_request_prompt">Accept modify call request?</string>
-    <string name="upgrade_vt_prompt">Would you like to upgrade the call to video call?</string>
-    <string name="upgrade_vt_tx_prompt">Would you like to upgrade the call to video transmit only call?</string>
-    <string name="upgrade_vt_rx_prompt">Would you like to upgrade the call to video receive only call?</string>
-    <string name="vt_init_fail_str">"VT initialization failed. Downgrading call to VoLTE
+    <string name="modify_call_option_title">Che tipo di chiamata?</string>
+    <string name="modify_call_option_vt">Videochiamata</string>
+    <string name="modify_call_option_vt_tx">Trasmetti video</string>
+    <string name="modify_call_option_vt_rx">Ricevi video</string>
+    <string name="modify_call_option_voice">Solo voce</string>
+    <string name="accept_modify_call_request_prompt">Accettare la richiesta di modifica della chiamata?</string>
+    <string name="upgrade_vt_prompt">Desideri trasformare la chiamata in una videochiamata?</string>
+    <string name="upgrade_vt_tx_prompt">Desideri trasformare la chiamata in una videochiamata con video in sola trasmissione?</string>
+    <string name="upgrade_vt_rx_prompt">Desideri trasformare la chiamata in una videochiamata con video in sola ricezione?</string>
+    <string name="vt_init_fail_str">"Inizializzazione videochiamata fallita. Verrà ripristinata come chiamata vocale
 "</string>
     <string name="no_vm_number">Numero segreteria mancante</string>
     <string name="no_vm_number_msg">Nessun numero di segreteria presente nella SIM.</string>
@@ -92,9 +92,9 @@
     <string name="label_ndp">PIN sblocco rete SIM</string>
     <string name="sim_ndp_unlock_text">Sblocca</string>
     <string name="sim_ndp_dismiss_text">Chiudi</string>
-    <string name="requesting_unlock">Richiesta sblocco network in corso...</string>
-    <string name="unlock_failed">Sblocco network fallito.</string>
-    <string name="unlock_success">Sblocco network eseguito con successo.</string>
+    <string name="requesting_unlock">Richiesta sblocco rete in corso...</string>
+    <string name="unlock_failed">Sblocco rete fallito.</string>
+    <string name="unlock_success">Sblocco rete eseguito con successo.</string>
     <string name="labelGSMMore">Impostazioni chiamate GSM</string>
     <string name="labelCDMAMore">Impostazioni chiamate CDMA</string>
     <string name="apn_settings">Nomi punti di accesso (APN)</string>
@@ -220,14 +220,14 @@ Velocità dati ridotta a %2$d Kb/s"</string>
 Il periodo succ. inizia tra %2$d gg (%3$s)"</string>
     <string name="throttle_rate_subtext">Velocità dati ridotta a %1$d Kb/s se limite utilizzo dati superato</string>
     <string name="throttle_help_subtext">Informazioni sulla norme di utilizzo dati della rete cellulare del gestore</string>
-    <string name="cell_broadcast_sms">Cell Broadcast SMS</string>
-    <string name="enable_disable_cell_bc_sms">Cell Broadcast SMS</string>
-    <string name="cell_bc_sms_enable">Cell Broadcast SMS enabled</string>
-    <string name="cell_bc_sms_disable">Cell Broadcast SMS disabled</string>
-    <string name="cb_sms_settings">Impostazioni SMS cell broadcast</string>
-    <string name="enable_disable_emergency_broadcast">Emergenza broadcast</string>
-    <string name="emergency_broadcast_enable">Emergenza broadcast attivato</string>
-    <string name="emergency_broadcast_disable">Emergenza broadcast disattivato</string>
+    <string name="cell_broadcast_sms">SMS diffusi dalla cella</string>
+    <string name="enable_disable_cell_bc_sms">SMS diffusi dalla cella</string>
+    <string name="cell_bc_sms_enable">SMS di cella attivati</string>
+    <string name="cell_bc_sms_disable">SMS di cella disattivati</string>
+    <string name="cb_sms_settings">Impostazioni SMS diffusa dalla cella</string>
+    <string name="enable_disable_emergency_broadcast">Comunicazioni di emergenza</string>
+    <string name="emergency_broadcast_enable">Comunicazioni di emergenza attivato</string>
+    <string name="emergency_broadcast_disable">Comunicazioni di emergenza disattivato</string>
     <string name="enable_disable_administrative">Amministrative</string>
     <string name="administrative_enable">Amministrative attivate</string>
     <string name="administrative_disable">Amministrative disattivate</string>
@@ -603,17 +603,17 @@ Il periodo succ. inizia tra %2$d gg (%3$s)"</string>
     <string name="accessibility_call_muted">Chiamata silenziata.</string>
     <string name="description_target_answer">Rispondi</string>
     <string name="description_target_answer_video">Rispondi con videochiamata</string>
-    <string name="description_target_answer_tx_video">Answer with TX Video</string>
-    <string name="description_target_answer_rx_video">Answer with RX Video</string>
+    <string name="description_target_answer_tx_video">Rispondi con video in trasmissione</string>
+    <string name="description_target_answer_rx_video">Rispondi con video in ricezione</string>
     <string name="description_target_send_sms">Invia SMS</string>
     <string name="description_target_decline">Rifiuta</string>
-    <string name="description_direction_up_right">Up Right</string>
-    <string name="description_direction_up_left">Up Left</string>
-    <string name="description_direction_down_left">Down Left</string>
-    <string name="description_direction_down_right">Down Right</string>
-    <string name="description_direction_up">Slide up for %s.</string>
-    <string name="description_direction_left">Slide left for %s.</string>
-    <string name="description_direction_right">Slide right for %s.</string>
+    <string name="description_direction_up_right">Superiore destro</string>
+    <string name="description_direction_up_left">Superiore sinistro</string>
+    <string name="description_direction_down_left">Inferiore sinistro</string>
+    <string name="description_direction_down_right">Inferiore destro</string>
+    <string name="description_direction_up">Scorrere per %s.</string>
+    <string name="description_direction_left">Scorrere verso sinistra per %s.</string>
+    <string name="description_direction_right">Scorrere verso destra %s.</string>
     <string name="voicemail_notification_vibrate_when_title">Vibra</string>
     <string name="voicemail_notification_vibarte_when_dialog_title">Vibra</string>
     <string name="voicemail_notification_ringtone_title">Suoneria</string>
@@ -622,35 +622,35 @@ Il periodo succ. inizia tra %2$d gg (%3$s)"</string>
     <string name="ringtone_title">Suoneria telefono</string>
     <string name="vibrate_on_ring_title">Vibra mentre squilla</string>
     <string name="dtmf_tone_enable_title">Toni tastiera</string>
-    <string name="dial_pad_autocomplete">Dial pad autocomplete</string>
-    <string name="preference_category_ringtone">Ringtone &amp; Vibrate</string>
-    <string name="manageConferenceLabel">Manage conference call</string>
-    <string name="sub_1">SUB 1</string>
-    <string name="sub_2">SUB 2</string>
-    <string name="emergency_call_dialog_number_for_display">Emergency number</string>
-    <string name="call_recording_error_privacy">"Can't record while you're in Guest mode"</string>
-    <string name="call_recording_error_sd_access">"Can't access SD card"</string>
-    <string name="call_recording_error_sd_unmounted">Recording has stopped: SD card is unmounted</string>
-    <string name="call_recording_error_low_storage">Not enough space: your SD card is too full</string>
-    <string name="call_recording_error_start_failed">Recorder is being used by another app</string>
-    <string name="call_recording_error_unknown">An unknown error occurred</string>
+    <string name="dial_pad_autocomplete">Autocompletamente tastierno di composizione</string>
+    <string name="preference_category_ringtone">Suoneria e vibrazione</string>
+    <string name="manageConferenceLabel">Gestione chiamate in conferenza</string>
+    <string name="sub_1">Sottoscr. 1</string>
+    <string name="sub_2">Sottoscr. 2</string>
+    <string name="emergency_call_dialog_number_for_display">Numero di emergenza</string>
+    <string name="call_recording_error_privacy">Impossibile registrare in modalità Ospite</string>
+    <string name="call_recording_error_sd_access">Impossibile accedere alla scheda SD</string>
+    <string name="call_recording_error_sd_unmounted">Registrazione interrotta: scheda SD smontata</string>
+    <string name="call_recording_error_low_storage">Spazio insufficiente: la tua scheda SD è troppo piena</string>
+    <string name="call_recording_error_start_failed">"Il Registratore è già in uso da parte di un'altra app"</string>
+    <string name="call_recording_error_unknown">Si è verificato un errore sconosciuto</string>
     <string name="antispam_marked_title">%1$s</string>
     <string name="phone_info_divider">" ｜ "</string>
-    <string name="antispam_marked_count">Reported by %1$d MIUI users</string>
-    <string name="antispam_provider">Identified by %s</string>
-    <string name="incoming_call_forwarded_title">Forward incoming calls</string>
-    <string name="suspect_info">"Always verify the identity of the person you're speaking with by phone or video before responding to any messages involving your personal finances."</string>
-    <string name="ivr_menu_list_title">Voice menu</string>
-    <string name="ivr_menu_dialing_msg">Forwarding…</string>
-    <string name="ivr_menu_dialing_msg_no_mute">Go to the selected service…[Automatic error correction is enabled]</string>
-    <string name="ivr_menu_list_sub_menu_count_format">Press %s</string>
-    <string name="non_ivr_menu_view_menu">View menu</string>
-    <string name="non_ivr_menu_collapse_menu">Collapse menu</string>
-    <string name="fraud_call_answer">Answer</string>
-    <string name="fraud_call_decline">Decline</string>
-    <string name="fraud_call_waring">Be careful: You should always verify the identity of the contact first by phone or video before responding to any messages involving your personal information.</string>
-    <string name="online_check_provider_info">Identified by %s</string>
+    <string name="antispam_marked_count">Segnalato da %1$d utenti MIUI</string>
+    <string name="antispam_provider">Identificato da %s</string>
+    <string name="incoming_call_forwarded_title">Inoltro chiamate in arrivo</string>
+    <string name="suspect_info">"Verifica sempre l'identica della persona con cui stai parlando al telefono o in videochiamata prima di rispondere a qualsiasi messaggio riguardante le tue finanze personali."</string>
+    <string name="ivr_menu_list_title">Menu voce</string>
+    <string name="ivr_menu_dialing_msg">Inoltro…</string>
+    <string name="ivr_menu_dialing_msg_no_mute">Passaggio al servizio selezionato… [Correzione automatica errori attivata]</string>
+    <string name="ivr_menu_list_sub_menu_count_format">Premi %s</string>
+    <string name="non_ivr_menu_view_menu">Mostra menù</string>
+    <string name="non_ivr_menu_collapse_menu">Collassa menu</string>
+    <string name="fraud_call_answer">Rispondi</string>
+    <string name="fraud_call_decline">Rifiuta</string>
+    <string name="fraud_call_waring">"Sii produente: dovresti sempre verificare l'identica del contatto per telefono o tramite videochiamata prima di rispondere a qualsiasi messaggio riguardo i tuoi dati personali."</string>
+    <string name="online_check_provider_info">Identificato da %s</string>
     <string name="online_check_provider_name_by_cmb">China Merchants Bank</string>
-    <string name="online_check_warning_info_by_cmb">"Always verify the identity of the person you're speaking with by phone or video before responding to any messages involving your personal finances."</string>
+    <string name="online_check_warning_info_by_cmb">"Verifica sempre l'identità della persona con cui stai parlando al telefono o tramite videochiamata prima di rispondere a qualsiasi messaggio riguardante le tue finanze personali."</string>
     <string name="online_check_warning_type_by_cmb">Spam</string>
 </resources>
