--- a/Italian/main/MiTagApp.apk/res/values-it/strings.xml
+++ b/Italian/main/MiTagApp.apk/res/values-it/strings.xml
@@ -60,17 +60,17 @@ toccalo con la parte posteriore del tuo telefono"</string>
     <string name="unavailable_net">"Installazione fallita: impossibile collegarsi alla rete"</string>
     <string name="unavailable_storage">"Installazione fallita: impossibile usare la tua scheda SD"</string>
     <string name="no_available_xiaomi_shop">Impossibile aprire il market Xiaomi </string>
-    <string name="task">Trigger tasks</string>
-    <string name="null_task">No tasks</string>
-    <string name="create_configs_prompt">To add a task, touch Add</string>
-    <string name="config_name_hint">Name</string>
-    <string name="remove_alert">Delete selected tasks?</string>
-    <string name="save_alert">Save this task?</string>
+    <string name="task">Esegui azione</string>
+    <string name="null_task">Nessuna azione</string>
+    <string name="create_configs_prompt">"Per aggiungere un'azione, tocca Aggiungi"</string>
+    <string name="config_name_hint">Nome</string>
+    <string name="remove_alert">"Cancellare l'azione selezionata?"</string>
+    <string name="save_alert">"Salvare questa azione?"</string>
     <string name="save_btn">Salva</string>
     <string name="not_save_btn">No</string>
     <string name="saving">Salvataggio…</string>
-    <string name="bump_write_alert">To apply these settings, touch the back of your phone to the tile</string>
-    <string name="pwd_alert">Set a password now</string>
+    <string name="bump_write_alert">Per applicare queste impostazioni, tocca il resto del tuo telefono con il tag</string>
+    <string name="pwd_alert">Imposta una password ora</string>
     <string name="pwd_pref">Proteggi il tag dalla riscrittura</string>
     <string name="pwd_pref_desc">Quando questa funzione di protezione viene attivata, sarà richiesta una passowrd per scrivere nuovamente il tag</string>
     <string name="input_password">Prego inserire la password di 4 cifre</string>
@@ -79,10 +79,10 @@ toccalo con la parte posteriore del tuo telefono"</string>
     <string name="input_old_password">Inserire la password salvata</string>
     <string name="input_new_password">Prego inserire la nuova password di 4 cifre</string>
     <string name="error_password">Errore password</string>
-    <string name="failed_to_write">Failed to write the tag</string>
-    <string name="failed_to_erase">Failed to erase the tag</string>
+    <string name="failed_to_write">Impossibile scrivere il tag</string>
+    <string name="failed_to_erase">Impossibile cancellare il tag</string>
     <string name="help_title">Aiuto</string>
-    <string name="err_nfc_off">"Abilita l'NFC in Impostazioni > Wireless &amp; reti > Altro > NFC"</string>
+    <string name="err_nfc_off">"Abilita l'NFC in Impostazioni > Wi-Fi e; reti > Altro > NFC"</string>
     <string name="err_no_nfc">"Il tuo telefono non supporta l'NFC. Questa app potrebbe non funzionare."</string>
     <string name="err_tag_not_supported">"Il tuo telefono non supporta i tag"</string>
     <string name="err_fail_to_read">Non è stato possibile leggere il tag</string>
@@ -90,21 +90,21 @@ toccalo con la parte posteriore del tuo telefono"</string>
     <string name="err_no_enough_space">"Non c'è abbastanza spazio sul tag"</string>
     <string name="err_fail_to_erase">Non è stato possibile cancellare il tag</string>
     <string name="err_tag_read_only">Non puoi scrivere su questo tag</string>
-    <string name="err_tag_protected">This tag is password protected. Please enter the correct password.</string>
-    <string name="err_parse_external_data">This file type is not supported</string
-    <string name="wireless_network">Wireless &amp; reti</string>
+    <string name="err_tag_protected">Quest tag è protetto da password. Prego inserire la password esatta.</string>
+    <string name="err_parse_external_data">Questo tipo di file non è supportato</string
+    <string name="wireless_network">Wi-Fi e reti</string>
     <string name="display">Schermo</string>
     <string name="sound">Audio</string>
     <string name="mode">Modalità</string>
     <string name="personal">Personale</string>
     <string name="communication">Telefono</string>
-    <string name="shortcut">Quick tasks</string>
-    <string name="wifi">WLAN</string>
+    <string name="shortcut">Azioni rapide</string>
+    <string name="wifi">Wi-Fi</string>
     <string name="click_to_choose">Tocca per aprire</string>
     <string name="set_now">Impostazioni</string>
     <string name="write_pon_pon_tile">Scrivi tag</string>
     <string name="reading">Lettura…</string>
-    <string name="writing">Writing…</string>
+    <string name="writing">Scrittura…</string>
     <string name="touch_and_write_more">"Per scrivere un'altra copia,
 tocca un altro tag con il retro del tuo telefono."</string>
     <string name="write_success">Scrittura eseguita</string>
@@ -125,7 +125,7 @@ tocca un altro tag con il retro del tuo telefono."</string>
     <string name="my_tags">I miei tag</string>
     <string name="edit_tag">Modifica</string>
     <string name="create_tag">Nuovo</string>
-    <string name="sure_to_delete_user_config">Cancellare questo task?</string>
+    <string name="sure_to_delete_user_config">Cancellare questa azione?</string>
     <string name="deleting">Cancellazione…</string>
     <string name="auto_brightness">Luminosità automatica</string>
     <string name="auto_brightness_on_off">Luminosità automatica %s</string>
@@ -154,7 +154,7 @@ tocca un altro tag con il retro del tuo telefono."</string>
     <string name="sms_content">Messaggio</string>
     <string name="characters">%d/72</string>
     <string name="hint_input_sms">Scrivi il messaggio</string>
-    <string name="screen_timeout">Sleep</string>
+    <string name="screen_timeout">Metti in standby</string>
     <string name="screen_timeout_summary">Dopo %s di inattività</string>
     <string name="app">Avvia app</string>
     <string name="select_app">Scegli app</string>
@@ -184,7 +184,7 @@ tocca un altro tag con il retro del tuo telefono."</string>
     <string name="set_alarm">Imposta allarme</string>
     <string name="alarm_summary_12h">hh:mm a</string>
     <string name="alarm_summary_24h">kk:mm</string>
-    <string name="alarm_time">Orariom allarme</string>
+    <string name="alarm_time">Orario allarme</string>
     <string name="alarm_label">Etichetta allarme (opzionale)</string>
     <string name="hint_input_alarm_label">"Inserisci l'etichetta dell'allarme"</string>
     <string name="torch">Torcia</string>
@@ -192,8 +192,8 @@ tocca un altro tag con il retro del tuo telefono."</string>
     <string name="music">Esegui musica</string>
     <string name="play_music_desc">Esegui o metti in pausa la musica</string>
     <string name="vibrate_mode">Vibrazione</string>
-    <string name="vibrate_on">Vibrazione attiva</string>
-    <string name="vibrate_off">Vibrazione disattiva</string>
+    <string name="vibrate_on">Vibrazione attivata</string>
+    <string name="vibrate_off">Vibrazione disattivata</string>
     <string name="miui_ringer_mode">Modalità suoneria</string>
     <string name="ringer_normal">Suoneria</string>
     <string name="ringer_silent">Silenzioso</string>
